--- a/src/main/resources/velocity/character-sheet.vm
+++ b/src/main/resources/velocity/character-sheet.vm
@@ -11,6 +11,7 @@
 <h1>$npc.name</h1>
 ## Zugriff auf die Variablen von $npc über "." => $npc.race.name entspricht $npc.getRace().getName() 
 <p>Race: $npc.race.name</p>
+<p>Alignment: $npc.alignment</p>
 <h2>Attribute</h2>
 <table>
 ## Schleife über alle Schlüssel (keys) in $npc.attributeMap:)
